Fix some layout issues
- If only one parameter ws present, the form changed lauout if you changed
  the contents, because there were more than 1 non-fixed <td> fields in a
  one line table, made the optional icon columns fixed length
- Moved the newnodes buttons to the right

--- a/editor/css/complex.css
+++ b/editor/css/complex.css
@@ -436,8 +436,11 @@ table.wizard{
     width: 100%;
 }
 
+td.wizardparameter{
+    width:20px;
+}
 td.wizardlabel {
-    width: 200px;
+    width: 150px;
 }
 
 td.wizardvalue {
@@ -497,7 +500,7 @@ img.optional {
 }
 
 .newNodesContainer {
-    margin-left:100px;
+    margin-left:188px;
 }
 
 .newNodesLevel {
